src/test/deca/syntax/invalid/sansObjets/erreurParenthesage.deca
// Description:
//    tests de programme incorrect lexicalement (erreur de parenthesage)
//
// Historique:
//    @DATE@

{
    int x = ((5 + 7) / 7 (+ 9 * 5));
}